src/test/deca/context/invalid/cmp-classes.deca
class A{}

class B{}

{
    A a = new A();
    B b = new B();
    if (a <= b) {
        println("probleme");
    }
}